--- a/css/style_geral.css
+++ b/css/style_geral.css
@@ -13,3 +13,31 @@
 .imagem{
     width: 21rem;
 }
+.texto{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 200px;
+    height: 900px;
+    background-color: #333;
+    padding: 10px;
+    overflow: auto;
+    border: solid 3px lightgreen;
+}
+.paragrafo1{
+    text-align: justify;
+    width: 400px;
+}
+.scrollButton {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: blueviolet;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    z-index: 999;
+    cursor: pointer;
+    display: none;
+}
