--- a/css/style_geral.css
+++ b/css/style_geral.css
@@ -41,3 +41,7 @@
     cursor: pointer;
     display: none;
 }
+.textoTeste{
+    font-family: Finger Paint, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.5rem;
+}
